Hamster-wars REST API med grundläggande validering

--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,7 @@
 		<h1> Data from Firestore </h1>
 		<p>
 			<button id="fetchData"> Fetch data </button>
+			<button id="hamster-1"> Kurt 1 </button>
 		</p>
 		<section id="displayData">
 			...
